--- a/tour_fabrica_moais.html
+++ b/tour_fabrica_moais.html
@@ -100,44 +100,91 @@
         <!-- Contenido dinámico -->
         <div class="tab-content py-3">
           <div id="descripcion" class="active">
-            <h6>¿Qué está incluido en el precio?</h6>
+            <p><b>¿Qué está incluido en el precio?</p></b>
             <ul>
               <li>Transporte privado</li>
-              <li>Guía nativo certificado</li>
+              <li>Guía privado y certificado</li>
+              <li>*NO incluye entrada al parque (valor 80 USD)</li>
             </ul>
-            <h6>Exclusiones</h6>
+            <p><b>Notas Importantes</p></b>
             <ul>
-              <li>Comida y bebida</li>
-              <li>Entrada al Parque Nacional</li>
+              <li>Se permiten animales o mascotas.</li>
+              <li>Accesible para sillas de ruedas.</li>
+              <li>Accesible para silla de bebé o cochecito.</li>
+              <li>Los niños deberán sentarse en el regazo.</li>
+              <li>No hay transporte publico cerca.</li>
+              <li>Asientos para bebes disponibles</li>
+              <li>Para acceder a nuestros tours solo necesitaremos la confirmación del pago desde la plataforma. Para los boletos al parque nacional, podemos acompañarte a obtener tus boletos en la oficina del parque, sin embargo, es responsabilidad del turista tener los suyos propios.</li>
+              <li>Lo recogeremos del hotel o lugar donde se hospedará de 15 a 10 minutos antes de la hora programada. El guía llevará una tarjeta de identificación con el logo y nombre de la empresa para que nos sea fácil identificarnos.</li>
+            </ul>
+            <p><b>Qué necesito llevar?</b></p>
+            <ul>
+              <li>Zapatos cómodos para caminar</li>
+              <li>Ropa ligera y transpirable.</li>
+              <li>Protección solar (protector solar, gorra, gafas de sol)</li>
+              <li>Agua y un pequeño refrigerio.</li>
+              <li>Una chaqueta o cortavientos (para la fresca brisa costera)</li>
+              <lu>Una bolsa reutilizable para objetos personales o basura.</lu>
+              <li>Cámara o teléfono para fotos.
+              </li>
+            </ul> 
+              <p><b>Política de cancelación</b></p>
+            </ul>
+            <ul>
+              <li>Cobraremos una tasa de cancelación del 100% si cancelas la reserva 1 Día o antes, del comienzo del evento</li>
+              <li>Cobraremos una tasa de cancelación del 0% si cancelas la reserva 1000 Días o antes, del comienzo del evento.</li>
+            </ul>
+            <p><b>Más Información</b></p>
+            <ul>
+              <li><b>Tipo de experiencia:</b> Tour / Actividad privado</li>
+              <li><b>Reservar con antelación:</b> Hora de cierre de reserva: 4 horas</li>
+              <li><b>Duración:</b> 6 hrs</li>
+              <li><b>Dificultad:</b> Fácil</li>
             </ul>
           </div>
           <div id="itinerario">
-            <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
+            <p><b>Ruta arqueológica y costera</p></b>
+            <p>Un recorrido por los sitios más emblemáticos de la historia de Rapa Nui, donde la arqueología, el paisaje y la espiritualidad se entrelazan en cada parada. <br><br>
+
+              Este tour te llevará por ahu sagrados, playas legendarias y canteras ancestrales. Desde los restos de los primeros reyes hasta la famosa cantera de moai, cada lugar aporta una pieza esencial del relato Rapa Nui.   </p>
+              <ul>
+                <li><strong>Restos Arqueológicos:</strong> Sitios que revelan el modo de vida y la evolución cultural del pueblo Rapa Nui.</li>
+                <li><strong>Ahu One Makihi:</strong> Lugar donde vivió el primer rey Hotu Matu’a, con moai caídos sin restaurar en su estado original.</li>
+                <li><strong>Ahu Tongariki:</strong> El mayor ahu de la isla, con 15 moai alineados sobre un altar de 100 metros frente al océano.</li>
+                <li><strong>Rano Raraku:</strong> Cantera ancestral donde fueron esculpidos casi todos los moai, aún visibles en diferentes etapas de construcción.</li>
+                <li><strong>Ovahe:</strong> Playa escondida de arena blanca, rodeada de acantilados de escoria roja.</li>
+                <li><strong>Anakena:</strong> Playa de arena coralina con aguas turquesas, moai imponentes y profundo valor histórico.</li>
+                <li><strong>Vaihú:</strong> Sitio ceremonial con moai caídos y plataformas que muestran la arquitectura tradicional.</li>
+                <li><strong>Ana Akahanga:</strong> Importante sitio arqueológico que se cree es el lugar de descanso del primer rey de la isla.</li>
+                <li><strong>Te Pito Kura:</strong> Sitio sagrado con el moai más grande trasladado y la piedra “Navel of the World”, de energía espiritual.</li>
+              </ul>
+              
           </div>
           <div id="recogida">
-            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+            <p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
               Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
+          
+            <ul>
+             <li>Altiplanico Rapa Nui</li>
+             <li>Easter Island Eco Lodge</li>
+             <li>Explora Rapa Nui</li>
+             <li>Hanana’s Residential Mata Vai Rahi</li>
+             <li>Hanga Piko</li>
+             <li>Hanga Roa Habrbour</li>
+             <li>Hare Maea</li>
+             <li>Hostal Gomero</li>
+             <li>Hotel Manavai</li>
+             <li>Hotel Manutara</li>
+             <li>Hotel Oceania Rapa Nui</li>
+             <li>Hotel Ohana</li>
+             <li>Hotel Puku vai</li>
+             <li>Hotel taha Tai</li>
+             <li>Hotel Tiare Pacific</li>
+             <li>Hotumatua</li>
+             <li>Iorana Hotel</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <ul>
-          <li>Altiplanico Rapa Nui</li>
-          <li>Easter Island Eco Lodge</li>
-          <li>Explora Rapa Nui</li>
-          <li>Hanana’s Residential Mata Vai Rahi</li>
-          <li>Hanga Piko</li>
-          <li>Hanga Roa Habrbour</li>
-          <li>Hare Maea</li>
-          <li>Hostal Gomero</li>
-          <li>Hotel Manavai</li>
-          <li>Hotel Manutara</li>
-          <li>Hotel Oceania Rapa Nui</li>
-          <li>Hotel Ohana</li>
-          <li>Hotel Puku vai</li>
-          <li>Hotel taha Tai</li>
-          <li>Hotel Tiare Pacific</li>
-          <li>Hotumatua</li>
-          <li>Iorana Hotel</li>
-        </ul>
       </div>
 
       <!-- Columna lateral -->
